added support for buffer/uint8_clamped

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "typedarray-pool",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "description": "Reuse typed arrays",
   "main": "pool.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "bit-twiddle": "~0.0.2",
-    "dup": "~0.0.0"
+    "bit-twiddle": "^0.0.2",
+    "dup": "^0.0.0"
   },
   "devDependencies": {
     "tap": "~0.4.2"
