--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dup": "^1.0.0"
   },
   "devDependencies": {
-    "tap": "~0.4.2"
+    "tape": "^2.12.3"
   },
   "scripts": {
-    "test": "tap test/*.js"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
