added testling and travis-ci badges

--- a/package.json
+++ b/package.json
@@ -36,5 +36,21 @@
   "author": "Mikola Lysenko",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "gitHead": "d7a8a448caf51042e6c371b11074aab6ebaf53ad"
+  "gitHead": "d7a8a448caf51042e6c371b11074aab6ebaf53ad",
+  "testling": {
+    "files": "test/*.js",
+    "browsers": [
+      "ie/8..latest",
+      "firefox/17..latest",
+      "firefox/nightly",
+      "chrome/22..latest",
+      "chrome/canary",
+      "opera/12..latest",
+      "opera/next",
+      "safari/5.1..latest",
+      "ipad/6.0..latest",
+      "iphone/6.0..latest",
+      "android-browser/4.2..latest"
+    ]
+  }
 }
